[gd_scene load_steps=10 format=2]

[ext_resource path="res://examples/gadget_examples/launcher_examples/launcher_example.gd" type="Script" id=1]
[ext_resource path="res://addons/first_party/mouse_listener/mouse_listener.gd" type="Script" id=2]
[ext_resource path="res://addons/first_party/assets/basic_2d_assets/polygons/circle/circle_filled.png" type="Texture" id=3]
[ext_resource path="res://addons/first_party/assets/basic_2d_assets/shapes/arrow/arrow_filled.png" type="Texture" id=4]
[ext_resource path="res://addons/first_party/components/spawning/launcher/launcher.gd" type="Script" id=5]
[ext_resource path="res://game/objects/bullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/first_party/components/spawning/launcher/resources/launcher_direction_stats_range.gd" type="Script" id=7]
[ext_resource path="res://addons/first_party/look_at/look_at.gd" type="Script" id=8]

[sub_resource type="Resource" id=1]
script = ExtResource( 7 )
min_vector = Vector2( 0, 0 )
max_vector = Vector2( 0, 0 )
min_degrees = -5.0
max_degrees = 5.0
mode = 1

[node name="launcher_example" type="Node2D"]
script = ExtResource( 1 )

[node name="mouse listener" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Look At" type="Node" parent="."]
script = ExtResource( 8 )
looking_node_path = NodePath("../circle")

[node name="circle" type="Sprite" parent="."]
position = Vector2( 506, 268 )
texture = ExtResource( 3 )

[node name="arrow" type="Sprite" parent="circle"]
position = Vector2( 81, -2 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="launcher" type="Node2D" parent="circle/arrow"]
position = Vector2( 57.5, -2.5 )
script = ExtResource( 5 )
scene_to_spawn = ExtResource( 6 )
position_mode = 1
spawn_scale = Vector2( 0.3, 0.3 )
rotation_mode = 1
parent_mode = 1
direction_mode = 1
launch_direction_data = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="debug_labels" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="control" type="Control" parent="CanvasLayer/debug_labels"]
anchor_left = 0.3
anchor_top = 0.7
anchor_right = 0.7
anchor_bottom = 1.0

[node name="label" type="Label" parent="CanvasLayer/debug_labels/control"]
anchor_right = 1.0
anchor_bottom = 0.5

[node name="label2" type="Label" parent="CanvasLayer/debug_labels/control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="mouse_button_change" from="mouse listener" to="." method="_on_mouse_listener_mouse_button_change"]
